search page, white space on left now more flexible fixes #13605
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/trunk@12319 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/webapp/wdk/css/wdkCommon.css
+++ b/View/webapp/wdk/css/wdkCommon.css
@@ -511,14 +511,14 @@ ul.menubar {
 
 .param-item label {
   float: left;
-  width: 320px;   /* 300px; */
+  width: 35%;  /*  320px; */   /* 300px; */
   /* clear: both; */
   text-align: right;
   padding-top: 4px;
 }
 
 .param-control {
-  margin-left: 330px; /*310px; */
+  margin-left: 36%;    /*330px;*/ /*310px; */
 }
 
 .param-control td {
